# pychat

./: .gitignore  pyproject.toml
pychat/: context.py  handler.py  proto.py  udp.py
pychat/client/: __init__.py  __main__.py
pychat/crud/: models.py
pychat/server/: __init__.py  __main__.py  member.py  room.py
tests/: test_pychat.py
