[tool.poetry]
name = "pychat"
version = "0.1.0"
description = ""
authors = ["lsongzhi <lsongzhi@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.0.2"
pydantic = "^1.5.1"
case-changer = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
